fix: increase gap on right header, decrease gap  text and icon in search (refs SFKUI-8013)

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -34,7 +34,7 @@ header {
             white-space: nowrap;
             font-size: var(--f-font-size-standard);
             min-width: 0;
-            gap: 1rem;
+            gap: 2.5rem;
             margin-left: 0;
         }
         &.is-single-row {
